runpath/kube1/weibo-mesh/egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: http-mesh
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress



#   apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: egress-rule-for-domaincontrollers
#   namespace: backend
# spec:
#   podSelector:
#     matchLabels:
#       run: pod
#   egress:
#   - to:
#     - DNSSelector:
#       -  adfs.mycompanyforrest.ad.mycompany.com
#     ports:
#     - port: 636
